syntax = "proto3";

package v2ray.core.proxy.mieru;
option csharp_namespace = "V2Ray.Core.Proxy.Mieru";
option go_package = "github.com/v2fly/v2ray-core/v5/proxy/mieru";
option java_package = "com.v2ray.core.proxy.mieru";
option java_multiple_files = true;

import "common/protoext/extensions.proto";
import "common/net/address.proto";

message ClientConfig {
  option (v2ray.core.common.protoext.message_opt).type = "outbound";
  option (v2ray.core.common.protoext.message_opt).short_name = "mieru";

  v2ray.core.common.net.IPOrDomain address = 1;
  uint32 port = 2;
  repeated string port_range = 3;
  string username = 4;
  string password = 5;
  string protocol = 6;
  string multiplexing = 7;
  string handshake_mode = 8;
  string traffic_pattern = 9;
}
